# browser-homepage-next

./: .oxfmtrc.json  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: README.md
server/: .gitignore  README.md  config.py  main.py  main.pyw  main.spec  pyproject.toml  service.py  services.py  smtc.py  styles.tcss  tui_panels.py
server/examples/: api_media.lghttp.json  api_media_next.lghttp.json  api_media_previous.lghttp.json  api_status.lghttp.json
src/: App.vue  main.ts
src/components/container/: BottomCenter.vue  LeftBottom.vue  LeftTop.vue  RightBottom.vue  RightTop.vue  index.ts
src/components/home/: Clock.vue  Quote.vue  SearchBox.vue
src/components/ui/: SearchCommandPanel.vue
src/components/ui/dialog/: DialogOverlay.vue
src/components/widgets/avatar/: Avatar.vue  index.ts
src/components/widgets/bookmarks/: BookmarkDialog.vue  BookmarkItem.vue  Bookmarks.vue  index.ts  types.d.ts  useBookmarks.ts
src/components/widgets/clock/: index.ts
src/consts/weather/: datasetToCity.ts  weatherIconSet.ts
src/lib/: fetchQuote.ts  fetchWeather.ts  index.ts
src/lib/device-info/: fetchDeviceInfo.ts  index.ts
src/lib/trending/: fetchGitHubData.ts  fetchWakatimeData.ts  fetchYouTubeData.ts  index.ts
src/lib/weather/: fetchWeather.ts  index.ts  transform.ts  utils.ts
src/stores/: useDeviceDataStore.ts  useWeatherStore.ts
src/styles/: index.css
src/types/: deviceDataResponse.d.ts  quoteResponse.d.ts  weatherResponse.d.ts
(+23 files in other folders)
