[project]
name = "browser-homepage-server"
version = "0.1.0"
description = "The server for my custom browser homepage, it will provide essential api to show device info and control the device."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "gputil>=1.4.0",
    "psutil>=7.2.2",
    "setuptools>=82.0.1",
    "textual>=8.2.7",
    "textual-slider>=0.2.0",
]
